@@ -17,6 +17,7 @@ New features:
 		* Export to PDF
 	* [import]
 		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
+		* Addeded seaborn's datasets to the collection of datasets
 
 Performance improvements:
 	* Make baseline removal much faster by using Eigen3 library (optional dependency)
